# advent_of_code_2024_C

./: .gitignore  CMakeLists.txt  README.md
include/: file_reader.h  my_hash_table.h  my_linalg.h  my_q.h  vector.h
inputs/: day15_0.txt  day15_1.txt  day15_sample1.txt
lib/: linked_list.h  my_string.h  vector.h
source/: CMakeLists.txt  day1.c  day10.c  day11.c  day12.c  day13.c  day14.c  day15.c  day16.c  day17.c  day18.c  day2.c  day3.c  day4.c  day5.c  day6.c  day7.c  day8.c  day9.c  file_reader.c  linked_list.c  my_hash_table.c  my_linalg.c  my_q.c  my_string.c  vector.c
test/: hash_table_test.c  linalg_test.c  vector_test.c
